HelloUltraviolet/Fixtures/RejectedSource/Expressions/RaceOperandYields/Expected.uv
//! Expected diagnostic metadata for the RaceOperandYields rejected-source specimen.

expectedDiagnostic("E-CON-0262", "rule.21.Race-Operand-Out-Err")
